@@ -59,6 +59,40 @@ def test_dcor_dev_search():
     assert len(data) == 0, "search result for non-existent dataset?"
 
 
+def test_dcor_dev_search_limit():
+    api = common.get_api()
+    ranstr = ''.join(random.choice("0123456789") for _i in range(10))
+    dataset_ids = []
+    # Create three test datasets
+    for _ in range(3):
+        ds_dict = dataset_create(
+            {"title": "{} {}".format(common.TITLE, ranstr),
+             "owner_org": common.CIRCLE,
+             "authors": common.USER_NAME,
+             "license_id": "CC0-1.0",
+             "groups": [{"name": common.COLLECTION}],
+             },
+            api=api,
+            resources=[dpath],
+            activate=True)
+        dataset_ids.append(ds_dict["id"])
+    db = db_api.APIInterrogator(api=api)
+    data_limited = db.search_dataset(query=ranstr,
+                                     circles=[common.CIRCLE],
+                                     collections=[common.COLLECTION],
+                                     circle_collection_union=True,
+                                     limit=2
+                                     )
+    assert len(data_limited) == 2
+    data_unlimited = db.search_dataset(query=ranstr,
+                                       circles=[common.CIRCLE],
+                                       collections=[common.COLLECTION],
+                                       circle_collection_union=True,
+                                       limit=0
+                                       )
+    assert len(data_unlimited) == 3
+
+
 if __name__ == "__main__":
     # Run all tests
     loc = locals()
